assets/css/style.css
/* ... */
/* Index-Donate panel */

.donate-panel {
	min-height: 603px;
	padding-bottom: 10px;
	background-color: #f0cfaf;
}

.donate-panel a {
	text-decoration: none;
	color: #dd9045;
}

.donate-details {
	text-align: Center;
}

.circle-image {
	position: relative;
	top: 20px;
	text-align: center;
	text-decoration: none;
}

.circle-image img {
	border-width: 1px;
	border-radius: 50%;
}

.left-circle {
	position: relative;
	left: 50px;
}

.middle-circle {
	top: 60px;
}

.right-circle {
	position: relative;
	right: 50px;
}


/* What we do-information panels */

.image-statement {
	text-align: center;
	min-width: 100px;
	max-width: 400px;
	padding: 10px;
	color: black;
	text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}

.image-statement h2 {
	font-size: 30px;
}

.upper-image {
	background: rgb(0, 0, 0);
	opacity: 0.9;
	background-image: url(../../assets/images/cage-cat.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 600px;
	padding-bottom: 20px;
}

.upper-statement {
	position: relative;
	bottom: 500px;
	left: 1340px;
	background-color: rgba(5, 5, 5, 0.5);
}

.middle-image {
	background: rgb(0, 0, 0);
	opacity: 0.9;
	background-image: url(../../assets/images/Man-with-kitten.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 600px;
	padding-bottom: 20px;
}

.middle-statement {
	position: relative;
	bottom: 510px;
	left: 70px;
	background-color: rgba(66, 48, 7, 0.5);
}

.lower-image {
	background: rgb(0, 0, 0);
	opacity: 0.9;
	background-image: url(../../assets/images/vet-kitten.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 600px;
	padding-bottom: 20px;
}

.lower-statement {
	position: relative;
	bottom: 500px;
	left: 730px;
	background-color: rgba(95, 129, 241, 0.5);
}


/* Support Us-Donate panel */

.support-page-donate-panel {
	background-image: url(../../assets/images/kitten-group.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 603px;
	padding-bottom: 10px;
	background-color: rgba(0, 0, 0, 0.5);
	opacity: 0.9;
}


/* used following website to figure out how to put borders around letters https://stackoverflow.com/questions/2570972/css-font-border */

.donate-title {
	font-size: 70px;
	font-weight: bold;
	text-align: Center;
	padding: 20px;
	position: relative;
	color: white;
	top: 10px;
	z-index: 1;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.donate-statement {
	font-size: 35px;
	text-align: Center;
	padding: 0px;
	position: relative;
	color: white;
	top: 10px;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.support-page-donate-panel button {
	position: relative;
	top: 150px;
	border-radius: 50%;
	height: 150px;
	width: 150px;
	font-size: 25px;
	border: 3px solid black;
}


/* Support Us-Fundrasising and Volunteer panel */

.support-lower-panel p {
	padding: 0px 30px 30px 30px;
}


/* Support us-Fundraising info */

.fundraising-background {
	min-height: 603px;
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	background-image: url(../../assets/images/kitty-flower.jpg);
	background-color: white;
	opacity: 0.8;
}

.fundraising-title {
	font-size: 25px;
	text-align: center;
	position: relative;
	top: 0px;
	padding: 20px 20px 0px 20px;
	z-index: 1;
	color: white;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.fundraising-info {
	font-size: 20px;
	text-align: center;
	position: absolute;
	padding: 0px 20px 20px 20px;
	z-index: 1;
	font-weight: bold;
	color: white;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}


/* volunteer form */

.volunteer-title {
	font-size: 25px;
	color: white;
	text-align: center;
	position: relative;
	top: 0px;
	padding: 20px 20px 0px 20px;
	opacity: 1;
	
}

.volunteer-info {
	font-size: 20px;
	text-align: center;
	color: white;
	position: relative;
	top: 0px;
	opacity: 1;
	padding: 0px 20px 20px 20px;
}

.volunteer-background {
	background-image: url(../../assets/images/affectionate-cat.jpg);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 603px;
}

.volunteer-box {
	text-align: center;
	height: 200px;
}

#coverletter {
	width: 100%;
}

.form-boxed {
	background-color: rgba(0, 0, 0, 0.5);
	z-index: 0;
}

.form-control {
	opacity: 1;
}

.volunteer-application {
	padding: 50px;
	color: white;
	position: relative;
	left: 17.5em;
	opacity: 0.8;
}


/* Support Us-Sponsor panel */

.sponsor-panel {
	padding-bottom: 30px;
	max-width: 1539px;
}

.sponsor-box {
	padding-top: 10px;
}


/* Pet advice-Fore image */

.advice-page-background {
	background-image: url(../../assets/images/cat-fuss.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 603px;
	padding-bottom: 10px;
	background-color: rgb(0, 0, 0);
	opacity: 0.8;
}


/* Pet Advice-videos */

.video-box {
	padding: 50px;
}

.video-title {
	text-align: center;
	font-size: 20px;
	position: relative;
	top: 40px;
}


/* Footer */

footer {
	background-color: black;
	position: relative;
	bottom: 0;
	text-align: center;
	padding: 10px;
}

.social-media {
	color: #e5aa70;
}

.help-us {
	color: #e5aa70;
}

.footer-panel p {
	font-size: 15px;
	color: #e5aa70;
}

.social-media a {
	color: #e5aa70;
}

.help-us a {
	color: #e5aa70;
}

.location a {
	color: #e5aa70;
}

#copyright {
	color: #e5aa70;
}


/* Buttons */

.btn-secondary,
.btn-secondary:hover,
.btn-secondary:active,
.btn-secondary:visited {
	background-color: #f0efaf;
	color: black;
}

.btn-primary,
.btn-primary:hover,
.btn-primary:active,
.btn-primary:visited {
	background-color: #e5aa70 !important;
	color: black !important;
	padding: 2px;
	border: 0px;
}
/* ... */

